# vdr-plugin-graphtftng

./: .gitignore  HISTORY.h  Makefile  README  README.themes  TODO  common.c  common.h  comthread.c  comthread.h  display.c  display.h  dspitems.c  graphtftng.c  graphtftng.h  renderer.c  renderer.h  scan.c  scan.h  scraper2vdr.c  scraper2vdr.h  service.h  setup.c  setup.h  span.h  status.c  sysinfo.c  sysinfo.h  tcpchannel.c  tcpchannel.h  test.c  theme.c  theme.h  touchthread.c  touchthread.h  vlookup.c
contrib/: graphtft-fe.conf  xsnow.conf
graphtft-fe/: Makefile  README  common.cc  common.hpp  comthread.cc  graphtft.cc  graphtft.hpp  main.cc  tcpchannel.cc  tcpchannel.h  thread.cc  thread.h
imlibrenderer/: Makefile  imlib.cc  imlibrenderer.c  imlibrenderer.h
imlibrenderer/dmyrenderer/: dmyrenderer.h
imlibrenderer/fbrenderer/: fbrenderer.c  fbrenderer.h
imlibrenderer/xrenderer/: xrenderer.c  xrenderer.h
patch/: epgsearch-0.9.24.diff  extrecmenu-1.1.diff  mailbox-0.5.0-mailcount.diff  mp3-0.9.15pre14_graphtft-cover-file.diff  muggle-0.0.8_graphtft_cover_file.diff  remotetimers.patch  vdr-2.2.0_graphtftng.diff  vdr-2.3.1_graphtftng.diff  vdr-2.7.5_graphtftng.diff  xsnow-gtftng.patch
plasma/: CMakeLists.txt  README  common.cc  common.hpp  comthread.cc  comthread.hpp  config.ui  configdialog.cc  configdialog.h  gtft.cpp  gtft.h  install.sh  plasma-applet-gtft.desktop  tcpchannel.cc
po/: de_DE.po  fi_FI.po  it_IT.po
scripts/: create-channlelogo-symlinks.pl  dia.sh  noadcall.sh
themes/: DeepBlue.theme  PearlHD.theme  anthraize.theme  nOpacity.theme
